# OpenHOI-OpenHeartsofIron

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING.md  Jenkinsfile  README.md  appveyor.yml  docker-run  fetch-deps  fetch-deps.bat  format-code  format-code.bat  prebuilt-dep-versions  winicon.rc
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
client/: CMakeLists.txt
client/include/: game_manager.hpp  game_manager_base.hpp  options.hpp
client/include/graphic/: texture_helper.hpp
client/include/state/: game_state.hpp  menu_state.hpp  state.hpp  state_manager.hpp
client/src/: client.cpp  game_manager.cpp  game_manager_base.cpp  options.cpp
client/src/graphic/: texture_helper.cpp
client/src/state/: menu_state.cpp  state_manager.cpp
cmake/global/: FindLibuuid.cmake  FindOGRE.cmake  FindRapidJSON.cmake  FindV8.cmake  GlobalDeps.cmake  GoogleTestCMakeLists.txt.in  GoogleTestDeps.cmake
cmake/win64/: FindCGAL.cmake  copy-pdb.bat
dev-assets/: flag-and-coat-of-arms-file-name-info.txt  imgui-links.txt  openhoi-logo.psd
dev-assets/coat_of_arms/: de-frg-cm.psd
dev-assets/flags/: de-frg-cm.psd  file-name-info.txt
game/: CMakeLists.txt
game/include/: game_manager.hpp  options.hpp
game/include/audio/: audio_device.hpp  audio_manager.hpp  sound.hpp
game/include/graphic/: gui_manager.hpp  texture_helper.hpp
game/include/gui/: combo_box.hpp  debug_console.hpp  gui_element.hpp  gui_manager.hpp  imgui_helper.hpp  imgui_renderable.hpp  options_dialog.hpp
game/include/state/: menu_state.hpp  state.hpp  state_manager.hpp
game/src/: client.cpp  game_manager.cpp  openhoi.cpp  options.cpp
game/src/audio/: audio_device.cpp  audio_manager.cpp  sound.cpp
game/src/graphic/: gui_manager.cpp  texture_helper.cpp
game/src/gui/: combo_box.cpp  debug_console.cpp  gui_element.cpp  gui_manager.cpp  imgui_helper.cpp  imgui_renderable.cpp  options_dialog.cpp
game/src/state/: menu_state.cpp  state.cpp  state_manager.cpp
hoibase/: CMakeLists.txt
hoibase/include/hoibase/: openhoi.hpp
hoibase/include/hoibase/file/: file_access.hpp  filesystem.hpp
hoibase/include/hoibase/helper/: debug.hpp  library.hpp  log_listener.hpp  os.hpp  synchronization.hpp  unique_id.hpp
hoibase/include/hoibase/log/: log_handler.hpp  log_listener.hpp
hoibase/include/hoibase/map/: map.hpp  map_factory.hpp  province.hpp
hoibase/include/hoibase/scripting/: scripting_runtime.hpp
hoibase/src/file/: file_access.cpp
hoibase/src/helper/: debug.cpp  log_listener.cpp  os.cpp  unique_id.cpp
hoibase/src/log/: log_listener.cpp
hoibase/src/map/: map.cpp  map_factory.cpp  province.cpp
hoibase/src/scripting/: scripting_runtime.cpp
hoibase/test/: CMakeLists.txt
hoibase/test/map/: province.cpp
legal/: bsd-findcgal  bsd-findrapidjson  cc-pdm-1.0  mit-ogre-imgui  public-domain  public-domain-audio  zlib-mojoal
server/: CMakeLists.txt
server/src/: server.cpp
snap/: snapcraft.yaml
template/: version.hpp.in
